fixed css error in z-index
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@25457 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/filter_menu.css
+++ b/Site/htdocs/assets/css/filter_menu.css
@@ -33,7 +33,7 @@
 	background-repeat: repeat-x;
 	border: 1px solid #345d9b;	
 	padding-bottom: 8px;
-	z-index: 90;
+	z-index: 1000;
 }
 
 #query_selection ul {
